--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
+body {
+  padding: 1rem;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.selected-user {
+  background-color: #f5f5f5;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  font-size: 1.25rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.users {
+  display: grid;
+  gap: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.user {
+  display: grid;
+  gap: 0.25rem;
+  grid-template-columns: 1fr auto auto;
+  /* max-width: 300px; */
+  padding: 0.5rem;
+  place-items: center;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+}
+
+.user button {
+  padding: 0.5rem;
+  background-color: darkslateblue;
   color: white;
+  border-radius: 0.25rem;
+  border: none;
+  cursor: pointer;
+  transition: filter 0.2s ease-in-out;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user button:hover {
+  filter: brightness(0.8);
 }
