--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,11 @@ h1 {
   text-align: center;
 }
 
+.users-container {
+  display: grid;
+  place-items: center;
+}
+
 .selected-user {
   background-color: #f5f5f5;
   padding: 0.5rem;
