--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,9 @@ body {
   margin: 0 auto;
 }
 
-h1 {
+h1,
+h2 {
   text-align: center;
-}
-
-.users-container {
-  display: grid;
-  place-items: center;
 }
 
 .selected-user {
@@ -18,34 +14,4 @@ h1 {
   padding: 0.5rem;
   border-radius: 0.25rem;
   font-size: 1.25rem;
-}
-
-.users {
-  display: grid;
-  gap: 10px;
-}
-
-.user {
-  display: grid;
-  gap: 0.25rem;
-  grid-template-columns: 1fr auto auto;
-  /* max-width: 300px; */
-  padding: 0.5rem;
-  place-items: center;
-  border: 1px solid #ccc;
-  border-radius: 0.25rem;
-}
-
-.user button {
-  padding: 0.5rem;
-  background-color: darkslateblue;
-  color: white;
-  border-radius: 0.25rem;
-  border: none;
-  cursor: pointer;
-  transition: filter 0.2s ease-in-out;
-}
-
-.user button:hover {
-  filter: brightness(0.8);
 }
